bugfix build compatiblity to java 9 modules